--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -6,6 +6,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{evans2018,
+  title={Refining the law of practice.},
+  author={Evans, Nathan J and Brown, Scott D and Mewhort, Douglas JK and Heathcote, Andrew},
+  journal={Psychological review},
+  volume={125},
+  number={4},
+  pages={592},
+  year={2018},
+  publisher={American Psychological Association}
+}
 
 
 @article{meylan2025,
@@ -427,6 +437,18 @@
 	title = {The slow development of real-time processing: Spoken-word recognition as a crucible for new thinking about language acquisition and language disorders},
 	volume = {31},
 	year = {2022}}
+
+@article{mcmurray2012,
+  title={Word learning emerges from the interaction of online referent selection and slow associative learning.},
+  author={McMurray, Bob and Horst, Jessica S and Samuelson, Larissa K},
+  journal={Psychological review},
+  volume={119},
+  number={4},
+  pages={831},
+  year={2012},
+  publisher={American Psychological Association}
+}
+
 
 @article{jeppsen2022development,
 	author = {Jeppsen, Charlotte and Baxelbaum, Keith and Tomblin, Bruce and Klein, Kelsey and McMurray, Bob},
